# backend/docs/swagger.yaml
@@ -63,6 +63,33 @@ definitions:
         example: "1234567890"
         type: string
     type: object
+  domain.Transaction:
+    properties:
+      account_id:
+        type: string
+      amount:
+        type: number
+      category:
+        items:
+          type: string
+        type: array
+      created_at:
+        type: string
+      date:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      pending:
+        type: boolean
+      plaid_item_id:
+        type: string
+      plaid_transaction_id:
+        type: string
+      updated_at:
+        type: string
+    type: object
   main.ErrorResponse:
     properties:
       error:
@@ -265,4 +292,29 @@ paths:
       summary: Create Plaid link token
       tags:
       - plaid
+  /api/v1/transactions:
+    get:
+      consumes:
+      - application/json
+      description: Get all transactions
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Transaction'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+      summary: Get transactions
+      tags:
+      - transactions
 swagger: "2.0"
